[tool.poetry]
name = "ubc"
version = "0.0.13"
description = "Utility Bill Calculator"
authors = ["Thomas Tu <thomasthetu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
requests = "^2.23.0"
jmespath = "^0.2.1"
altair = "^4.1.0"
dynaconf = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
